--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
   <% end %>
-  <h1>Editing category</h1>
+  <h1>Editing Ebook Category</h1>
 </div>
 
 <%= render 'form' %>
