--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-plus"></span>
     New Category
   <% end %>
-  <h1>Listing categories</h1>
+  <h1>Listing Ebook Categories</h1>
 </div>
 
  <div class="panel panel-primary" id="accordion">
