--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,8 +10,9 @@
   <h1>Show category</h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>Category name:</dt>
-  <dd><%= @category.category_name %></dd>
-
-</dl>
+<div class="table-responsive">
+  <table class="table table-hover">
+  <tr><th>Category name:</th>
+  <td><%= @category.category_name %></td></tr>
+</table>
+</div>
