--- a/app/views/timetables/show.html.erb
+++ b/app/views/timetables/show.html.erb
@@ -39,6 +39,6 @@
   <dd><%= @timetable.description %></dd>
 
   <dt>Staff:</dt>
-  <dd><%= @timetable.staff.staff_name %></dd>
+  <dd><%= @timetable.staff_id %></dd>
 
 </dl>
