--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <h1>New category</h1>
+  <h1>New Ebook Category</h1>
 </div>
 
 <%= render 'form' %>
