--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,25 @@
-  <p>
-    <strong>Student ID:</strong>
-    <%= comment.student_id %>
-  </p>
- 
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
+<div class='review'>
+  <div class="user">
+      <%= comment.student_id %>
+  </div>
 
-  <p>
-  <%= link_to 'Destroy Comment', [comment.forum, comment],
-               method: :delete,
-               data: { confirm: 'Are you sure?' } %>
-</p>
+<% if current_user.role =="Student" %>
+  <% @student = Student.where(:email => current_user.email) %>
+  <% @student.each do |student| %>
+      <div class="comment well">
+        <% if student.student_name == comment.student_id %>
+         <div style="float:right; margin-top:0px;">
+          <%= link_to (image_tag ("../close.png"), :size => "10x10"), [comment.forum, comment], :confirm => "Are you sure?", :method => :delete %>
+          </div>
+        <% end %>
+          <%= comment.body %>
+      </div>
+  <% end %>
+<% elsif  %>
+  <div class="comment well">
+    <%= comment.body %>
+  </div>
+<% end %>
+
+</div>
+
