--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,11 @@
-<%= form_for([@forum, @forum.comments.build]) do |f| %>
-  <p>
-    <%= f.label :student_id %><br>
-    <%= f.text_field :student_id %>
-  </p>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+<% if user_signed_in? %>
+<div class="page-header">
+ <h4>Add Your Comment: </h4>
+</div>
+<%= simple_form_for([@forum, @forum.comments.build]) do |f| %>
+    <%= f.input :body, as: :text, input_html: {rows: 3} %>
+  <div class="actions">
+    <%= f.submit nil, :class => "btn btn-primary" %>
+  </div>
+<% end %>
 <% end %>
