--- a/app/views/ebooks/_form.html.erb
+++ b/app/views/ebooks/_form.html.erb
@@ -3,10 +3,10 @@
 
   <div class="form-inputs">
     <%= f.input :ebook_name %>
-    <%= f.file_field :file, multiple: false %>
-    <%= f.input :about %>
+    <%= f.label :file %>
+    <%= f.file_field :file, multiple: false %></br>
+    <%= f.input :about, as: :text, input_html: {rows: 5} %>
     <%= f.input :category_id, :as => :select, :collection=> Category.all.map { |c| [c.category_name,c.id]} %>
-    <%= f.input :uploader_id, :as => :select, :collection=> Staff.all.map { |s| [s.staff_name,s.id]} %>
   </div>
 
   <div class="form-actions">
