--- a/app/views/exam_lists/edit.html.erb
+++ b/app/views/exam_lists/edit.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
   <% end %>
-  <h1>Editing exam_list</h1>
+  <h1>Editing exam list</h1>
 </div>
 
 <%= render 'form' %>
