--- a/app/views/forums/_form.html.erb
+++ b/app/views/forums/_form.html.erb
@@ -3,8 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :author_id, :as => :select, :collection=> Student.all.map { |s| [s.student_name,s.id]  } %>
+    <%= f.input :description, as: :text, input_html: {rows: 10}  %>
   </div>
 
   <div class="form-actions">
