--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :no %>
+    <%= f.input :no, :label => "Room No" %>
     <%= f.input :room_name %>
     <%= f.input :description %>
   </div>
