--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -32,7 +32,7 @@
   <table class="table table-striped table-hover">
     <thead>
       <tr>
-            <th>No</th>
+            <th>Room No</th>
             <th>Room name</th>
             <th></th>
         <th></th>
