--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,14 +10,16 @@
   <h1>Show room</h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>No:</dt>
-  <dd><%= @room.no %></dd>
+<div class="table-responsive">
+  <table class="table table-hover">
+  <tr><th>Room No:</th>
+  <td><%= @room.no %></td></tr>
 
-  <dt>Room name:</dt>
-  <dd><%= @room.room_name %></dd>
+  <tr><th>Room name:</th>
+  <td><%= @room.room_name %></td></tr>
 
-  <dt>Description:</dt>
-  <dd><%= @room.description %></dd>
+  <tr><th>Description:</th>
+  <td><%= @room.description %></td></tr>
 
-</dl>
+</table>
+</div>
