--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,12 @@
   <h1>Show user</h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>Role:</dt>
-  <dd><%= @user.role %></dd>
+<div class="table-responsive">
+  <table class="table table-hover">
+  <tr><th>Email:</th>
+  <td><%= @user.email %></td></tr>
 
-  <dt>Type:</dt>
-  <dd><%= @user.user_type %></dd>
-
-</dl>
+  <tr><th>Role:</th>
+  <td><%= @user.role %></td></tr>
+</table>
+</div>
